eclipse-workspace/.metadata/.plugins/org.eclipse.cdt.ui/notasEstructuras.build.log
16:26:32 **** Rebuild of configuration Debug for project notasEstructuras ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\notasEstructuras.o" "..\\src\\notasEstructuras.c" 
..\src\notasEstructuras.c:50:1: warning: "/*" within comment [-Wcomment]
 /*
  
..\src\notasEstructuras.c:92:3: error: expected identifier or '(' before '/' token
  */
   ^
..\src\notasEstructuras.c:101:3: error: unknown type name 'eAlumno'
  }eAlumno
   ^~~~~~~
..\src\notasEstructuras.c:103:10: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'vectorAlumnos'
  eAlumno vectorAlumnos[10];
          ^~~~~~~~~~~~~

16:26:32 Build Failed. 3 errors, 1 warnings. (took 175ms)

